# lh-array-sort-new

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  benchmark_results.txt  cabal.project  cabal.project.freeze  default.nix  lh-array-sort.cabal  script.py  shell.nix  stack.yaml
.github/workflows/: build-liquid.yaml  build-test-linear.yaml  build.yml  test-nix-shell.yml
bench/c/: quicksort_glibc.c
bench/hs/: hsbench.cabal
benchmarks/: README.md
benchmarks/c/: Makefile  benchmarks.h  cbench.h  gib_insertion.c  gib_mergesort.c.buggy  gibbon_rts.c  helpers.c  helpers.h  insertionsort.c  insertionsort_glibc.c  main.c  mergesort.c  microbench.c  quicksort.c
benchmarks/c/archived/: gibbon_rts.c  gibbon_rts.h  main.c  quicksort_glibc.c
benchmarks/gibbon/: FillArray.hs  Insertion.hs  LinearMergesort.hs  Mergesort.c  QSortShims.hs  QuickSort.hs
benchmarks/gibbon/sml_bench/: BenchModified.sml  DpsMerge.hs  DpsMerge.sml  DpsMergeSort.hs  DpsMergeSort.sml  Entry.sml  Insertion.hs  Insertion.sml  Merge.hs  Merge.sml  MergeSortSeq.hs  MergeSortSeq.sml  QSortShims.hs  QSortShims.sml  QuickSort.hs  QuickSort.sml  Util.sml  bench.mlb  bench.sh  qsortUnverified.sml
benchmarks/haskell/: Insertionsort_out.csv  Mergesort_out.csv  hsbenchmarks.cabal  sweep.py
benchmarks/haskell/src/: InsertionSort.hs  MergeSort.hs  QuickSort.hs
benchmarks/java/: README.md  pom.xml  runbench.sh
benchmarks/java/src/main/java/array/bench/: BenchRunner.java  BenchSort.java  InsertionSort.java  Main.java  ParMergeSort.java  QuickSort.java  SeqMergeSort.java
benchmarks/scripts/: plot.py  plot_relative_speedup.py  readme  sweep_seq.py
benchmarks/scripts/c-sorting-benchmarks/: readme  sort_quick_out.csv
benchmarks/scripts/criterion-drop-in-replacement/: README.md  criterionmethodology.py  readme  sweep_seq.py
benchmarks/scripts/old-criterion/: plot.py  plot_relative_speedup.py  readme  sweep_seq.py
benchmarks/scripts/old-criterion/c-sorting-benchmarks/: readme  sort_insertion_out.csv  sort_merge_seq_out.csv
benchrunner/: Benchrunner.hs  Benchrunner_old.hs  ForeignFunctionImports.hs  Input.hs  MVector.hs  Measure.hs  README.md  Sort.hs  Types.hs  Utils.hs  Vector.hs  benchrunner.cabal
benchrunner/c++/: Makefile  benchmarks.h  helpers.h  insertionsort.c  main.c  mergesort.c  microbench.c
benchrunner/csorts/: Makefile  benchmarks.h  helpers.h  insertionsort.c  main.c  mergesort.c  mergesort_common.h  mergesort_par.c  microbench.c  microbench.h  par_helpers.h  quicksort.c
benchrunner/csorts/archived/: cbench.h  cilksort.c.old  gib_mergesort.c.buggy
benchrunner/cxx/: Makefile  benchmarks.h  helpers.h  insertionsort.cpp  insertionsort_glibc.c  insertionsort_int_wrapper.cpp  main.cpp  mergesort.c  mergesort.cpp  mergesort_common.h  mergesort_int_wrapper.cpp  mergesort_par.c  microbench_par.c  par_helpers.c  quicksort.c  quicksort.cpp  quicksort_int_wrapper.cpp
prof/: Array.hs  Copy.hs  DpsMergeSort.hs  Insertion.hs  Main.hs  Measure.hs  Sort.hs  prof.cabal
quest-plugin/: QuestPlugin.hs  quest-plugin.cabal
src/: Array.hs  Array.hs-boot  Array.test  ArrayOperations.hs  BagTest.hs  BigStep.hs  CilkSort.hs  Compile.hs  CutoffSort.hs  DMSParMonadStuff.hs  DpsMerge.hs  DpsMerge4.hs  DpsMergePar.hs  DpsMergeParSeqFallback.hs  DpsMergeSort.hs  DpsMergeSort4.hs  DpsMergeSort4Par.hs  DpsMergeSortPar.bak  DpsMergeSortPar.hs  Equivalence.hs  Fib.hs  Imp.hs  Insertion.hs  InsertionOld.hs  LinearMerge.hs  Merge.hs  MergeLinear.hs  Microbench.hs  Order.hs  Par.hs  Permutations.hs  PiecewiseFallbackSort.hs  PiecewiseFallbackSortPar.hs  ProofCombinators.hs  Properties.hs  QuickSort.hs  QuickSortCilk.hs  UnsafeLinear.hs
src/Array/: List.hs  Mutable.hs
src/Array/Mutable/: PrimUnlifted.hs  Unlifted.hs
src/Array/Mutable/.liquid/: PrimUnlifted.hs.cst.html  PrimUnlifted.hs.err  PrimUnlifted.hs.html  PrimUnlifted.hs.json  PrimUnlifted.hs.smt2  PrimUnlifted.hs.vim.annot  Unlifted.hs.bak  Unlifted.hs.cst.html  Unlifted.hs.err  Unlifted.hs.html  Unlifted.hs.json  Unlifted.hs.smt2  Unlifted.hs.vim.annot
src/Linear/: Common.hs  Unsafe.hs
src/Properties/: Equivalence.hs  Order.hs  Partitions.hs  RangeProperties.hs
tests/: ArrayTests.hs  Infra.hs  InvalidSorts.hs  Main.hs  Properties.hs  SortTests.hs  test.hs
