cabal-version: >=1.10

name:           lh-array-sort
version:        0.1.0.0
description:    Various "in place" sorting algorithms verified with LH.
homepage:
bug-reports:
author:         Ranjit Jhala
maintainer:     jhala@cs.ucsd.edu
copyright:      2020 Ranjit Jhala
license:        MIT
license-file:   LICENSE
build-type:     Simple

Flag mutable-arrays
   Description: Use mutable arrays.
   Default: False

Flag prim-mutable-arrays
   Description: Use mutable arrays of primitive types.
   Default: False

Flag liquid-checks
   Description: Perform liquid checks. If False, we instead perform linear checks (unless we use mutable arrays.)
   Default: True

library

  if flag(mutable-arrays)
    cpp-options: -DMUTABLE_ARRAYS

  if flag(prim-mutable-arrays)
    cpp-options: -DPRIM_MUTABLE_ARRAYS -DMUTABLE_ARRAYS
  
  exposed-modules:
      Par
      Array
      ArrayOperations
      Properties.Equivalence
      Properties.Order
      Properties.Partitions
      Properties.RangeProperties

      -- Re-enable sorts as refactoring completes
      Insertion

      -- DpsMerge
      -- DpsMergePar
      -- DpsMergeParSeqFallback
      -- DpsMergeSort
      -- DpsMergeSort4
      -- DpsMergeSortPar
      -- DpsMergeSort4Par

      -- Microbench

      -- QuickSort
      -- QuickSortCilk

      -- JZ: Add Parallel Cilksort
      -- Current Cilksort is entirely sequential

-- remove until ready:
--      QuickSortNew   
--  the last not quite ready yet?
--      CilkSort
  other-modules:
      Array.List
      Array.Mutable
      Array.Mutable.Unlifted
      Array.Mutable.PrimUnlifted
      ProofCombinators
      Linear.Unsafe
      Linear.Common
  hs-source-dirs:
      src
  build-depends:
      base, 
      deepseq,
      random,
      containers,

      liquid-prelude        >= 0.9.2.8.2,
      liquidhaskell-boot    == 0.9.10.1, 
      liquidhaskell         == 0.9.10.1,
      parallel,
      monad-par,
      linear-base,
      primitive
  default-language: GHC2021
  ghc-options: -Wall -Wcompat
               -fdefer-typed-holes
               -ddump-simpl
               -ddump-to-file
               -O2
               -w
  if !(flag(mutable-arrays) || flag(prim-mutable-arrays))
    if flag(liquid-checks)
      ghc-options: -fplugin=LiquidHaskell
                   -fplugin-opt=LiquidHaskell:--ple
                   -fplugin-opt=LiquidHaskell:--ple-with-undecided-guards
                   -fplugin-opt=LiquidHaskell:--reflection
                   -fplugin-opt=LiquidHaskell:--short-names
    else
      build-depends: quest-plugin
      default-extensions: LinearTypes
      ghc-options: -fplugin=QuestPlugin
      cpp-options: -DLINEAR
