cabal-version: >=1.10

name:           lh-array-sort
version:        0.1.0.0
description:    Various "in place" sorting algorithms verified with LH.
homepage:
bug-reports:
author:         Ranjit Jhala
maintainer:     jhala@cs.ucsd.edu
copyright:      2020 Ranjit Jhala
license:        MIT
license-file:   LICENSE
build-type:     Simple

Flag mutable-arrays
   Description: Use mutable arrays.
   Default: False

Flag prim-mutable-arrays
   Description: Use mutable arrays of primitive types.
   Default: False

Flag liquid-checks
   Description: Perform liquid checks. If False, we instead perform linear checks (unless we use mutable arrays.)
   Default: True
  
Flag verbose-tests
   Description: Output extra information when running the test cases
   Default: False

library

  if flag(mutable-arrays)
    cpp-options: -DMUTABLE_ARRAYS

  if flag(prim-mutable-arrays)
    cpp-options: -DPRIM_MUTABLE_ARRAYS -DMUTABLE_ARRAYS
  
  exposed-modules:
      Par
      Array
      ArrayOperations
      Properties.Equivalence
      Properties.Order
      Properties.Partitions
      Properties.RangeProperties

      -- Add sorts here
      Insertion  

      DpsMerge
      DpsMergePar
      DpsMergeParSeqFallback
      -- DpsMergeSort     -- don't necessarily need for paper
      DpsMergeSort4
      -- DpsMergeSortPar  -- don't necessarily need for paper
      DpsMergeSort4Par

      Microbench

      QuickSort
      PiecewiseFallbackSort
      PiecewiseFallbackSortPar

      -- JZ: Add Parallel Cilksort
      -- Current Cilksort is entirely sequential

-- remove until ready:
--      QuickSortNew   
--  the last not quite ready yet?
--      CilkSort
      Linear.Common
  other-modules:
      Array.List
      Array.Mutable
      Array.Mutable.Unlifted
      Array.Mutable.PrimUnlifted
      ProofCombinators
      Linear.Unsafe
  hs-source-dirs:
      src
  build-depends:
      base, 
      deepseq,
      containers,
      vector                >= 0.13 && < 0.14,
      parallel,
      monad-par,
      linear-base,
      primitive,
      array,

      -- Liquid stuff
      -- TODO: this shouldn't be neeeded unless -fliquid-checks
      liquid-prelude        >= 0.9.2.8.2,
      liquidhaskell-boot    == 0.9.10.1,
      liquidhaskell         == 0.9.10.1,

      -- tests (Arbitrary class) only
      -- TODO: move to test component
      random,
      tasty-quickcheck

  default-language: GHC2021

  ghc-options: -Wall -Wcompat
               -fdefer-typed-holes
               -ddump-simpl
               -ddump-to-file
               -O2
               -w

  -- the plugin stuff
  build-depends: quest-plugin
  ghc-options: -fplugin=QuestPlugin

  -- Turn on Liquid Haskell conditionally; else, turn on Linear Haskell
  if !(flag(mutable-arrays) || flag(prim-mutable-arrays))
    if flag(liquid-checks)
      ghc-options: -fplugin=LiquidHaskell
                   -fplugin-opt=LiquidHaskell:--ple
                   -fplugin-opt=LiquidHaskell:--ple-with-undecided-guards
                   -fplugin-opt=LiquidHaskell:--reflection
                   -fplugin-opt=LiquidHaskell:--short-names
      ghc-options: -fplugin-opt=QuestPlugin:liquid
    else
      default-extensions: LinearTypes
      cpp-options: -DLINEAR
      ghc-options: -fplugin-opt=QuestPlugin:linear

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  other-modules:
    ArrayTests
    SortTests
  build-depends:
    base >= 4.7 && < 5,
    array,
    deepseq,
    random,
    tasty,
    tasty-hunit,
    tasty-smallcheck,
    tasty-quickcheck,
    lh-array-sort

  if flag(verbose-tests)
    cpp-options: -DVERBOSE_TESTS
  else
    cpp-options: -DNO_VERBOSE_TESTS
