cabal-version:      >=1.10

name:               benchrunner
version:            0.1
build-type:         Simple
synopsis:           Benchmark harness.

executable benchrunner
    main-is:          Benchrunner.hs
    other-modules:      Measure
                      , ForeignFunctionImports
                      , Types
    -- other-extensions:
    build-depends:      base
                      , lh-array-sort
                      , criterion
                      , random
                      , deepseq
                      , split
                      , monad-par
                      , time
                      , primitive
                      , vector
                      , vector-algorithms
    default-language:   GHC2021
    default-extensions: TupleSections
                        BangPatterns
                        NamedFieldPuns
                        RecordWildCards
                        ScopedTypeVariables
                        DeriveGeneric
                        LinearTypes
    ghc-options:        -Wall -Wcompat
                        -threaded -rtsopts
                        -fdefer-typed-holes
                        -O2

    c-sources:
                      csorts/insertionsort.c
                      csorts/mergesort.c
                      csorts/quicksort.c

    -- DNDEBUG disables asserts in cbits/
    cc-options:        -std=c11 -O3 -DNDEBUG=1
                       -fno-strict-aliasing
                       -Werror=undef
