cabal-version:      2.2
name:               benchrunner
version:            0.1
build-type:         Simple
synopsis:           Benchmark harness.

executable benchrunner
    main-is:          Benchrunner.hs
    other-modules:      Measure
                      , ForeignFunctionImports
                      , Types
    -- other-extensions:
    build-depends:      base
                      , lh-array-sort
                      , criterion
                      , random
                      , deepseq
                      , split
                      , monad-par
                      , time
                      , primitive
                      , vector
                      , vector-algorithms
    default-language:   GHC2021
    default-extensions: TupleSections
                        BangPatterns
                        NamedFieldPuns
                        RecordWildCards
                        ScopedTypeVariables
                        DeriveGeneric
                        LinearTypes
    ghc-options:        -Wall -Wcompat
                        -threaded -rtsopts
                        -fdefer-typed-holes
                        -O2 -optl -lstdc++ -optl -lgcc_s




    c-sources:
                      csorts/insertionsort.c
                      csorts/mergesort.c
                      csorts/quicksort.c

    cxx-sources:
                      cxx/insertionsort.cpp
                      cxx/mergesort.cpp
                      cxx/quicksort.cpp
                      cxx/insertionsort_int_wrapper.cpp
                      cxx/mergesort_int_wrapper.cpp
                      cxx/quicksort_int_wrapper.cpp

	if impl(ghc >= 9.4)
		build-depends:      system-cxx-std-lib
	else
    		if os(windows)
			extra-libraries:  stdc++
		if os(linux)
			extra-libraries:  stdc++
    		if os(darwin)
      			extra-libraries:  stdc++


    -- DNDEBUG disables asserts in cbits/
    cc-options:        -std=c11 -O3 -DNDEBUG=1
                       -fno-strict-aliasing
                       -Werror=undef

    cpp-options: -std=c++11 -O3
