cabal-version:      3.0
name:               benchrunner
version:            0.1
build-type:         Simple
synopsis:           Benchmark harness.

executable benchrunner
    main-is:          Benchrunner.hs
    other-modules:      Measure
                      , ForeignFunctionImports
                      , Types
    -- other-extensions:
    build-depends:      base
                      , lh-array-sort
                      , criterion
                      , random
                      , deepseq
                      , split
                      , monad-par
                      , time
                      , primitive
                      , vector
                      , vector-algorithms
                      , system-cxx-std-lib
    default-language:   GHC2021
    default-extensions: TupleSections
                        BangPatterns
                        NamedFieldPuns
                        RecordWildCards
                        ScopedTypeVariables
                        DeriveGeneric
                        LinearTypes
    ghc-options:        -Wall -Wcompat
                        -threaded -rtsopts
                        -fdefer-typed-holes
                        -O2

    c-sources:
                      csorts/insertionsort.c
                      csorts/mergesort.c
                      csorts/quicksort.c

    cxx-sources:
                      cxx/insertionsort.cpp
                      cxx/mergesort.cpp
                      cxx/quicksort.cpp
                      cxx/insertionsort_int_wrapper.cpp
                      cxx/mergesort_int_wrapper.cpp
                      cxx/quicksort_int_wrapper.cpp

    -- DNDEBUG disables asserts in cbits/
    cc-options:        -std=c11 -O3 -DNDEBUG=1
                       -fno-strict-aliasing
                       -Werror=undef

    cxx-options: -std=c++11 -O3 -fno-strict-aliasing
