cabal-version:      >=1.10

name:               hsbench
version:            0.1.0.0
synopsis:           Haskell implementation of benchmarks.
build-type:         Simple

executable hsbench
    main-is:             Main.hs
    build-depends:       base >= 4.15 && <4.17
    hs-source-dirs:      src
    default-language:    Haskell2010
    default-extensions:  TupleSections
                         BangPatterns
                         NamedFieldPuns
                         RecordWildCards
                         ScopedTypeVariables
                         DeriveGeneric
    ghc-options:         -Wall -Wcompat
