cabal-version:      >=1.10

name:               hsbenchmarks
version:            0.1
synopsis:           Haskell implementation of benchmarks.
build-type:         Simple

library
    build-depends:       base >= 4.14 && <4.17
    hs-source-dirs:      src
    default-language:    Haskell2010
    default-extensions:  TupleSections
                         BangPatterns
                         NamedFieldPuns
                         RecordWildCards
                         ScopedTypeVariables
                         DeriveGeneric
    ghc-options:         -Wall -Wcompat
